name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/DRomanenko/itmo-fp/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Demian Romanenko
maintainer:          romanenko@niuitmo.ru
copyright:           2020 Demian Romanenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                       Block1.Task2
                       Block1.Task3
                       Block2.Task2
                       Block3.Task1
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
