name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/DRomanenko/itmo-fp/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Demian Romanenko
maintainer:          romanenko@niuitmo.ru
copyright:           2020 Demian Romanenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1
                       Block1.Task2
                       Block1.Task3
                       Block2.Task1
                       Block2.Task2
                       Block3.Task1
                       Block3.Task2
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AllTests
  build-depends:       base >=4.7 && <5
                     , hw2
                     , hspec >=2 && <2.8
                     , hspec-core >=2 && <2.8
                     , mtl
                     , tagged >=0.2
                     , tasty >=0.8 && <0.13 || >=1.0 && <1.5
                     , tasty-hspec
                     , tasty-hunit
                     , tasty-quickcheck >=0.3 && <0.9 || >=0.9.1 && <0.11
                     , tasty-smallcheck >=0.1 && <0.9
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

