name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/DRomanenko/itmo-fp/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Demian Romanenko
maintainer:          romanenko@niuitmo.ru
copyright:           2020 Demian Romanenko

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       Parser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , time
                     , optparse-applicative
                     , directory
                     , filepath
                     , transformers
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , directory
                     , filepath
                     , transformers
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
